--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,8 @@
 plugins {
     // Apply the java plugin to add support for Java
     id 'java'
-     id "org.sonarqube" version "2.7"
+    id 'jacoco'
+id "org.sonarqube" version "2.7"
     // Apply the application plugin to add support for building an application
     id 'application'
 }
