--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,9 @@ plugins {
      id "org.sonarqube" version "2.7"
     // Apply the application plugin to add support for building an application
     id 'application'
+	id "jacoco"
+	id 'org.sonarqube'
+
 }
 
 repositories {
@@ -19,10 +22,20 @@ repositories {
     // You can declare any Maven/Ivy/file repository here.
     jcenter()
 }
-
+jacoco {
+toolVersion = "0.7.9"
+reportsDir = file("$buildDir/customJacocoReportDir")
+}
+jacocoTestReport {
+reports {
+xml.enabled false
+csv.enabled false
+html.destination file("${buildDir}/jacocoHtml")
+}
 dependencies {
     // This dependency is found on compile classpath of this component and consumers.
     implementation 'com.google.guava:guava:27.0.1-jre'
+classpath("org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.2.1")
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
